fix labels/selectors overflow their containers

--- a/web/src/app/modules/shared/components/presentation/overflow-labels/overflow-labels.component.scss
+++ b/web/src/app/modules/shared/components/presentation/overflow-labels/overflow-labels.component.scss
@@ -1,15 +1,9 @@
 /* Copyright (c) 2019 the Octant contributors. All Rights Reserved.
  * SPDX-License-Identifier: Apache-2.0
  */
-
-.labels-wrapper {
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-
-  .label.clickable {
-    cursor: pointer;
-  }
+ 
+.labels-wrapper .label.clickable {
+  cursor: pointer;
 }
 
 .signpost {
